--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
   src: url("../fonts/genkai-mincho.ttf");
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: linear-gradient(180deg, #46b664, #017fb1) fixed;
   color: white;
@@ -23,7 +27,7 @@ header {
   position: absolute;
   display: flex;
   width: 100%;
-  padding: 1rem 2rem;
+  padding: 1rem;
   justify-content: flex-end;
 }
 
@@ -116,5 +120,88 @@ h3 {
 @media (max-width: 445px){
   a {
     font-size: 0.9rem;
+  }
+}
+
+a.scroll {
+  padding-top: 60px;
+}
+
+a.scroll span {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  transform: rotate(-45deg);
+  box-sizing: border-box;
+}
+
+a.scroll span:hover {
+  opacity: 0.35;
+  transition: 0.6s ease;
+}
+
+.card {
+  width: 550px;
+  height: auto;
+  border-radius: 2ch;
+  margin: 50px auto;
+  margin-top: 0;
+  color: black;
+  background-color: hsla(0, 0%, 100%, 0.65);
+  box-shadow: 0 2.5rem 2rem -2rem hsl(200 50% 20% / 40%);
+  font-family: 'Noto Sans JP', sans-serif;
+}
+
+.title {
+  margin: 20px auto;
+  text-align: center;
+  width: 550px;
+  /* border-bottom: dashed 2px; */
+  font-size: 1.2rem;
+  /* padding: 5px 0; */
+}
+
+.card .table {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 30px;
+}
+
+.card .table h4 {
+  width: 30%;
+  padding: 10px;
+  margin: 0;
+  text-align: center;
+}
+
+.card .table p {
+  width: 70%;
+  padding: 10px;
+  margin: 0;
+}
+
+@media screen and (max-width: 760px) {
+  .title {
+    width: 90%;
+  }
+  .card {
+    width: 90%;
+  }
+  .card .table h4,
+  .card .table p {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 761px) {
+  .card .table h4,
+  .card .table p {
+    font-size: 15px;
   }
 }
