--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,24 @@ html {
 }
 
 body {
-  background: linear-gradient(180deg, #46b664, #017fb1) fixed;
+  /* background: linear-gradient(180deg, #46b664, #017fb1) fixed; */
   color: white;
   font-family: 'Orbitron', sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
+}
+body::before {
+  content: "";
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(180deg, #46b664, #017fb1) center/cover no-repeat;
 }
 
 header {
